# hubris

./: Cargo.toml
app/bldc/: Cargo.toml  app.toml  openocd.cfg
app/bldc/src/: main.rs
app/demo-stm32f4-discovery/: app-f3.toml  app.toml
app/demo-stm32g0-nucleo/: app-g031.toml  app-g070.toml
app/demo-stm32h7-nucleo/: Cargo.toml  app-h723.toml  app-h743.toml  app-h753.toml  openocd.cfg
app/demo-stm32h7-nucleo/src/: main.rs
app/gemini-bu/: app.toml
app/gemini-bu-rot/: app.toml
app/gimlet/: rev-a.toml  rev-b.toml
app/gimletlet/: app-mgmt.toml  app-vsc7448.toml  app.toml
app/lpc55xpresso/: app.toml
app/sidecar/: app.toml
bldc/app/: Cargo.toml  app.toml  openocd.cfg  openocd.gdb  stm32h7x_custom.cfg
bldc/app/src/: main.rs
bldc/drv/clock-inspect/: Cargo.toml  build.rs
bldc/drv/clock-inspect-api/: build.rs
bldc/drv/clock-inspect/src/: main.rs
bldc/drv/pwm/: Cargo.toml  build.rs
bldc/drv/pwm-api/: Cargo.toml  build.rs
bldc/drv/pwm-api/src/: lib.rs
bldc/drv/pwm/src/: main.rs
bldc/idl/: pwm.idol
chips/: stm32h7.toml  stm32h735.toml  stm32h73x.toml
drv/bldc/clock-inspect/: Cargo.toml  build.rs
drv/bldc/clock-inspect-api/: Cargo.toml  build.rs
drv/bldc/clock-inspect-api/src/: lib.rs
drv/bldc/clock-inspect/src/: main.rs
drv/ecp5/: Cargo.toml
drv/ecp5/src/: lib.rs  spi.rs  types.rs
drv/i2c-devices/src/: raa229618.rs
drv/ksz8463/src/: lib.rs
drv/lpc55-romapi/src/: lib.rs
drv/lpc55-spi-server/src/: main.rs
drv/sidecar-seq-api/: Cargo.toml
drv/sidecar-seq-api/src/: lib.rs
drv/sidecar-seq-server/: Cargo.toml
drv/sidecar-seq-server/src/: main.rs  payload.rs
drv/stm32h7-eth/src/: lib.rs
drv/stm32h7-spi-server/src/: main.rs
drv/stm32h7-startup/: Cargo.toml
drv/stm32h7-startup/src/: lib.rs
drv/stm32xx-gpio-common/: Cargo.toml
drv/stm32xx-gpio-common/src/: server.rs
drv/stm32xx-sys/: Cargo.toml
drv/stm32xx-sys-api/: Cargo.toml
drv/stm32xx-sys/src/: main.rs
drv/user-leds/src/: main.rs
drv/vsc85xx/src/: lib.rs  vsc85x2.rs
idl/: ecp5.idol  rot-sprocket.idol
idl/bldc/: clock-inspect.idol
stage0/src/: hypo.rs  main.rs
sys/kern/src/: lib.rs
sys/kern/src/arch/: arm_m.rs
sys/userlib/src/: lib.rs
task/ecp5/: Cargo.toml  blinky_ecp5_evn.bit  blinky_ecp5_evn.compressed.bit  build.rs  sidecar_main.bit  sidecar_main_board_controller.bit
task/ecp5/src/: main.rs
task/hiffy/: Cargo.toml
task/hiffy/src/: common.rs  lpc55.rs  main.rs
task/net/src/: main.rs  mgmt.rs  server.rs
task/net/src/bsp/: gimletlet_mgmt.rs  gimletlet_nic.rs
task/ping/src/: main.rs
task/pong/: Cargo.toml
task/pong/src/: main.rs
task/rot-sprocket/: Cargo.toml  build.rs
task/rot-sprocket-api/: Cargo.toml  build.rs
task/rot-sprocket-api/src/: lib.rs
task/rot-sprocket/src/: main.rs
task/spdm/: Cargo.toml
task/spdm-api/src/: lib.rs
task/spdm/src/: main.rs
test/test-suite/: Cargo.toml
test/test-suite/src/: main.rs
test/tests-gemini-bu/: app.toml
test/tests-gemini-bu-rot/: app.toml
test/tests-lpc55xpresso/: app-a0.toml  app.toml
test/tests-stm32fx/: app-f3.toml  app.toml
test/tests-stm32g0/: app-g070.toml
test/tests-stm32h7/: app-h743.toml  app-h753.toml
