[package]
name = "ecp5"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
bitfield = "0.13"
zerocopy = "0.6.1"
num-traits = { version = "0.2.12", default-features = false }

userlib = {path = "../../sys/userlib"}
ringbuf = {path = "../../lib/ringbuf"}
drv-spi-api = {path = "../../drv/spi-api"}
drv-stm32xx-sys-api = {path = "../stm32xx-sys-api"}

[features]

[build-dependencies]
build-util = {path = "../../build/util"}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[lib]
test = false
bench = false
