[package]
name = "drv-stm32h7-startup"
version = "0.1.0"
edition = "2018"

[dependencies]
stm32h7 = { version = "0.14", default-features = false, features = ["rt"] }
cortex-m = {version = "0.7", features = ["inline-asm"]}
cortex-m-rt = "0.6.12"

[features]
default = ["h723"]  # Needed to make RA happy
family-stm32h72x-stm32h73x = ["stm32h7/stm32h735"]
family-stm32h72x = ["family-stm32h72x-stm32h73x"]
family-stm32h73x = ["family-stm32h72x-stm32h73x"]
h723 = ["family-stm32h72x"]
h743 = ["stm32h7/stm32h743"]
h753 = ["stm32h7/stm32h753"]
