[package]
name = "task-rot-sprocket"
version = "0.1.0"
edition = "2018"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
zerocopy = "0.6.1"
num-traits = { version = "0.2.12", default-features = false }
ringbuf = {path = "../../lib/ringbuf"}
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
sprockets = {path = "../../../sprockets", default-features = false, features = ["rot"]}
hubpack = { rev = "da22d33ffd754fa837ed16da19194fd0bb63c4e9", git = "https://github.com/cbiffle/hubpack"}
task-rot-sprocket-api = { path = "../rot-sprocket-api/" }

[build-dependencies]
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-rot-sprocket"
test = false
bench = false
