[package]
name = "drv-clock-inspect"
version = "0.1.0"
edition = "2018"

[dependencies]
userlib = {path = "../../../sys/userlib"}
drv-clock-inspect-api = {path = "../clock-inspect-api"}
drv-stm32xx-sys-api = {path = "../../../drv/stm32xx-sys-api"}
# stm32f3 = { version = "0.13.0", features = ["stm32f303"], optional = true }
# stm32f4 = { version = "0.13.0", features = ["stm32f407"], optional = true }
# lpc55-pac = { version = "0.3.0", optional = true }
zerocopy = "0.6.1"
num-traits = { version = "0.2.12", default-features = false }
cfg-if = "0.1.10"
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
stm32h7 = { version = "0.14", default-features = false, features = ["rt"], optional = true}

[build-dependencies]
build-util = {path = "../../../build/util"}
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}

[features]
default = ["h735"]
h735 = ["stm32h7/stm32h735", "drv-stm32xx-sys-api/h735", "stm32h7/stm32h735"]
panic-messages = ["userlib/panic-messages"]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-clock-inspect"
test = false
bench = false
